test/conformance/chainsaw/tls-certificates/rsa-cert-manager/01-issuer.yaml
# Self-signed ClusterIssuer for generating the CA certificate
apiVersion: cert-manager.io/v1
kind: ClusterIssuer
metadata:
  name: selfsigned-issuer
spec:
  selfSigned: {}
